@@ -49,6 +49,7 @@ public:
 	int getMinBits() const;
 	int getMaxBits() const;
 	int getMinSubbands() const;
+	int nRecordChan(const std::string &antName) const;
 	int nStream() const;
 	const VexSetup* getSetup(const std::string &antName) const;
 	double getLowestSampleRate() const;	/* samples per second */
